--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dipendenze (cartella pesantissima, si rigenera con npm install)
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Build di Next.js (file temporanei compilati)
+.next/
+out/
+build/
 
-# testing
-/coverage
+# File di configurazione locale (contiene le tue password del DB)
+.env.local
+.env
+.env.development.local
+.env.test.local
+.env.production.local
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# File di sistema
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
+# Log di errori
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
